include/codata_constants_2022.h

ADD_IMPORT extern const struct codata_constant_type BOHR_MAGNETON_IN_HZ_T;
ADD_IMPORT extern const struct codata_constant_type BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA;
ADD_IMPORT extern const struct codata_constant_type BOHR_MAGNETON_IN_K_T;
ADD_IMPORT extern const struct codata_constant_type BOHR_RADIUS;
ADD_IMPORT extern const struct codata_constant_type BOLTZMANN_CONSTANT;
ADD_IMPORT extern const struct codata_constant_type BOLTZMANN_CONSTANT_IN_EV_K;
ADD_IMPORT extern const struct codata_constant_type BOLTZMANN_CONSTANT_IN_HZ_K;
ADD_IMPORT extern const struct codata_constant_type BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN;
ADD_IMPORT extern const struct codata_constant_type CHARACTERISTIC_IMPEDANCE_OF_VACUUM;
ADD_IMPORT extern const struct codata_constant_type CLASSICAL_ELECTRON_RADIUS;
ADD_IMPORT extern const struct codata_constant_type COMPTON_WAVELENGTH;
ADD_IMPORT extern const struct codata_constant_type CONDUCTANCE_QUANTUM;
ADD_IMPORT extern const struct codata_constant_type CONVENTIONAL_VALUE_OF_AMPERE_90;
ADD_IMPORT extern const struct codata_constant_type CONVENTIONAL_VALUE_OF_COULOMB_90;
ADD_IMPORT extern const struct codata_constant_type CONVENTIONAL_VALUE_OF_FARAD_90;
ADD_IMPORT extern const struct codata_constant_type CONVENTIONAL_VALUE_OF_HENRY_90;