src/codata_constants_2022_capi.f90


type(capi_constant_type), protected, public, bind(C, name="BOHR_MAGNETON_IN_HZ_T") ::&
capi_46 = capi_constant_type([ &
"B", "o", "h", "r", " ", "m", "a", "g", "n", "e", &
"t", "o", "n", " ", "i", "n", " ", "H", "z", "/", &
"T", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOHR_MAGNETON_IN_HZ_T%value, &
BOHR_MAGNETON_IN_HZ_T%uncertainty, &
[ &
"H", "z", " ", "T", "^", "-", "1", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA") ::&
capi_47 = capi_constant_type([ &
"B", "o", "h", "r", " ", "m", "a", "g", "n", "e", &
"t", "o", "n", " ", "i", "n", " ", "i", "n", "v", &
"e", "r", "s", "e", " ", "m", "e", "t", "e", "r", &
" ", "p", "e", "r", " ", "t", "e", "s", "l", "a", &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA%value, &
BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA%uncertainty, &
[ &
"m", "^", "-", "1", " ", "T", "^", "-", "1", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOHR_MAGNETON_IN_K_T") ::&
capi_48 = capi_constant_type([ &
"B", "o", "h", "r", " ", "m", "a", "g", "n", "e", &
"t", "o", "n", " ", "i", "n", " ", "K", "/", "T", &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOHR_MAGNETON_IN_K_T%value, &
BOHR_MAGNETON_IN_K_T%uncertainty, &
[ &
"K", " ", "T", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOHR_RADIUS") ::&
capi_49 = capi_constant_type([ &
"B", "o", "h", "r", " ", "r", "a", "d", "i", "u", &
"s", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOHR_RADIUS%value, &
BOHR_RADIUS%uncertainty, &
[ &
"m", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOLTZMANN_CONSTANT") ::&
capi_50 = capi_constant_type([ &
"B", "o", "l", "t", "z", "m", "a", "n", "n", " ", &
"c", "o", "n", "s", "t", "a", "n", "t", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOLTZMANN_CONSTANT%value, &
BOLTZMANN_CONSTANT%uncertainty, &
[ &
"J", " ", "K", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOLTZMANN_CONSTANT_IN_EV_K") ::&
capi_51 = capi_constant_type([ &
"B", "o", "l", "t", "z", "m", "a", "n", "n", " ", &
"c", "o", "n", "s", "t", "a", "n", "t", " ", "i", &
"n", " ", "e", "V", "/", "K", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOLTZMANN_CONSTANT_IN_EV_K%value, &
BOLTZMANN_CONSTANT_IN_EV_K%uncertainty, &
[ &
"e", "V", " ", "K", "^", "-", "1", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOLTZMANN_CONSTANT_IN_HZ_K") ::&
capi_52 = capi_constant_type([ &
"B", "o", "l", "t", "z", "m", "a", "n", "n", " ", &
"c", "o", "n", "s", "t", "a", "n", "t", " ", "i", &
"n", " ", "H", "z", "/", "K", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOLTZMANN_CONSTANT_IN_HZ_K%value, &
BOLTZMANN_CONSTANT_IN_HZ_K%uncertainty, &
[ &
"H", "z", " ", "K", "^", "-", "1", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN") ::&
capi_53 = capi_constant_type([ &
"B", "o", "l", "t", "z", "m", "a", "n", "n", " ", &
"c", "o", "n", "s", "t", "a", "n", "t", " ", "i", &
"n", " ", "i", "n", "v", "e", "r", "s", "e", " ", &
"m", "e", "t", "e", "r", " ", "p", "e", "r", " ", &
"k", "e", "l", "v", "i", "n", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN%value, &
BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN%uncertainty, &
[ &
"m", "^", "-", "1", " ", "K", "^", "-", "1", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CHARACTERISTIC_IMPEDANCE_OF_VACUUM") ::&
capi_54 = capi_constant_type([ &
"c", "h", "a", "r", "a", "c", "t", "e", "r", "i", &
"s", "t", "i", "c", " ", "i", "m", "p", "e", "d", &
"a", "n", "c", "e", " ", "o", "f", " ", "v", "a", &
"c", "u", "u", "m", c_null_char, " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CHARACTERISTIC_IMPEDANCE_OF_VACUUM%value, &
CHARACTERISTIC_IMPEDANCE_OF_VACUUM%uncertainty, &
[ &
"o", "h", "m", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CLASSICAL_ELECTRON_RADIUS") ::&
capi_55 = capi_constant_type([ &
"c", "l", "a", "s", "s", "i", "c", "a", "l", " ", &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "r", &
"a", "d", "i", "u", "s", c_null_char, " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CLASSICAL_ELECTRON_RADIUS%value, &
CLASSICAL_ELECTRON_RADIUS%uncertainty, &
[ &
"m", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="COMPTON_WAVELENGTH") ::&
capi_56 = capi_constant_type([ &
"C", "o", "m", "p", "t", "o", "n", " ", "w", "a", &
"v", "e", "l", "e", "n", "g", "t", "h", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
COMPTON_WAVELENGTH%value, &
COMPTON_WAVELENGTH%uncertainty, &
[ &
"m", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CONDUCTANCE_QUANTUM") ::&
capi_57 = capi_constant_type([ &
"c", "o", "n", "d", "u", "c", "t", "a", "n", "c", &
"e", " ", "q", "u", "a", "n", "t", "u", "m", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CONDUCTANCE_QUANTUM%value, &
CONDUCTANCE_QUANTUM%uncertainty, &
[ &
"S", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CONVENTIONAL_VALUE_OF_AMPERE_90") ::&
capi_58 = capi_constant_type([ &
"c", "o", "n", "v", "e", "n", "t", "i", "o", "n", &
"a", "l", " ", "v", "a", "l", "u", "e", " ", "o", &
"f", " ", "a", "m", "p", "e", "r", "e", "-", "9", &
"0", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CONVENTIONAL_VALUE_OF_AMPERE_90%value, &
CONVENTIONAL_VALUE_OF_AMPERE_90%uncertainty, &
[ &
"A", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CONVENTIONAL_VALUE_OF_COULOMB_90") ::&
capi_59 = capi_constant_type([ &
"c", "o", "n", "v", "e", "n", "t", "i", "o", "n", &
"a", "l", " ", "v", "a", "l", "u", "e", " ", "o", &
"f", " ", "c", "o", "u", "l", "o", "m", "b", "-", &
"9", "0", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CONVENTIONAL_VALUE_OF_COULOMB_90%value, &
CONVENTIONAL_VALUE_OF_COULOMB_90%uncertainty, &
[ &
"C", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CONVENTIONAL_VALUE_OF_FARAD_90") ::&
capi_60 = capi_constant_type([ &
"c", "o", "n", "v", "e", "n", "t", "i", "o", "n", &
"a", "l", " ", "v", "a", "l", "u", "e", " ", "o", &
"f", " ", "f", "a", "r", "a", "d", "-", "9", "0", &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CONVENTIONAL_VALUE_OF_FARAD_90%value, &
CONVENTIONAL_VALUE_OF_FARAD_90%uncertainty, &
[ &
"F", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CONVENTIONAL_VALUE_OF_HENRY_90") ::&
capi_61 = capi_constant_type([ &
"c", "o", "n", "v", "e", "n", "t", "i", "o", "n", &
"a", "l", " ", "v", "a", "l", "u", "e", " ", "o", &
"f", " ", "h", "e", "n", "r", "y", "-", "9", "0", &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CONVENTIONAL_VALUE_OF_HENRY_90%value, &
CONVENTIONAL_VALUE_OF_HENRY_90%uncertainty, &
[ &
"H", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])
